codex-rs/tui/src/agent_runtime/snapshots/codex_tui__agent_runtime__workspace_tests__agent_workspace_identity_120.snap
---
source: tui/src/agent_runtime/workspace_tests.rs
expression: "render(&workspace.wide_detail(), width, 8)"
---
研 究 者 界 界 界 界 界 界 界 界 界 界 界 界 界 界 界 界 界 界 界 界 界 界 界 界  [reviewer] · /root/long_segment_long_segment_long_se…
fb74ec29bb26badb…long_segment_long_segment_long_segment_
lifecycle · working
point-in-time telemetry unavailable
